@@ -1,4 +1,4 @@
-Copyright (c) 2003-2010, Arvid Norberg
+Copyright (c) 2003-2014, Arvid Norberg
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
