@@ -1,3 +1,4 @@
+	* simplified building python bindings
 	* make ignore_non_routers more forgiving in the case there are no UPnP
 	  devices at a known router. Should improve UPnP compatibility.
 	* include reason in peer_blocked_alert
